objects/ssot__HealthcareFacility__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AreResearchStudiesConducted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Studies Conducted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__AvailabilityExceptionsText__c</fullName>
        <label>Availability Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AverageActualPtcpEnrlDrtnNumber__c</fullName>
        <label>Avg Actual Participant Enrollment Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageClinicalTrialAgreementDrtnNumber__c</fullName>
        <label>Avg Clinical Trial Agree Turnaround Drtn</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageOpdPatientCount__c</fullName>
        <label>Average OPD Patient Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgActualParticipantEnrollmentRate__c</fullName>
        <label>Avg Actual Participant Enrollment Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgActualPtcpEnrlCount__c</fullName>
        <label>Avg Actual Ptcp Enrollment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgInvtglProductReleaseDrtnNumber__c</fullName>
        <label>Avg Investigational Prodt Release Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgProjectedPtcpEnrlCount__c</fullName>
        <label>Avg Projected Ptcp Enrollment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgProjectedPtcpEnrlDrtnNumber__c</fullName>
        <label>Avg Projected Ptcp Enrollment Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgQualVstToInitVstDrtnNumber__c</fullName>
        <label>Avg Qual Visit to Initiation Visit Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgRegltyDocTrnarndDrtnNumber__c</fullName>
        <label>Avg Regulatory Document Turnaround Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgRsrchEthicalReviewDrtnNumber__c</fullName>
        <label>Avg Research Ethical Rvw Approval Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgSiteActvToFstPtcpDrtnNumber__c</fullName>
        <label>Avg Site Activation to First Ptcp Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvgSiteActvToLastPtcpDrtnNumber__c</fullName>
        <label>Avg Site Activation To Last Ptcp Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalTrialAgreementType__c</fullName>
        <label>Clinical Trial Agreement Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityCategory__c</fullName>
        <label>Healthcare Facility Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityClassification__c</fullName>
        <label>Healthcare Facility Classification</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityStatusName__c</fullName>
        <label>Healthcare Facility Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityTypeId__c</fullName>
        <label>Healthcare Facility Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderId__c</fullName>
        <label>Healthcare Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Facility Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestigationalProdtDisposalCpbl__c</fullName>
        <label>Investigational Prodt Disposal Cpbl</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestigationalProdtPreparationCpbl__c</fullName>
        <label>Investigational Prodt Preparation Cpbl</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestigationalProdtStorageCapability__c</fullName>
        <label>Investigational Prodt Storage Capability</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestigationalProductType__c</fullName>
        <label>Investigational Product Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAfflWithSiteMgmtOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliated with Site Management Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsAlwaysOpen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Always Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDedicatedResearchStudyRoomAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedicated Research Study Room Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsDedicatedRsrchStdyMonitorRoomAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedicated Rsrch Stdy Monitoring Room Avl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsGoodClnclPracTrnPrvd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good Clinical Practice Training Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsHandicapAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Handicap Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPharmacogenomicSpecimenCollectionAvl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacogenomic Specimen Collection Avl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPkpdSpecimenCollectionStorageAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PKPD Specimen Collection and Storage Avl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRearsrchStudyMaterialStoreAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Study Material Store Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsReasearchEthicalReviewSbmsSupp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Ethical Review Sbms Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSatelliteSite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Satellite Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsTrainingProvided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsUrgentCare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Urgent Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsWalkInAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Walk In Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LicensedBedCount__c</fullName>
        <label>Licensed Bed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperationalStatusName__c</fullName>
        <label>Operational Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentHealthcareFacilityId__c</fullName>
        <label>Parent Healthcare Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientAgeRange__c</fullName>
        <label>Patient Age Range</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryViolationCount__c</fullName>
        <label>Regulatory Violation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchEthicalReviewCommitteeType__c</fullName>
        <label>Research Ethical Review Committee Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyMethod__c</fullName>
        <label>Research Study Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyStartYear__c</fullName>
        <label>Research Study Start Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeName__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportedResearchStudyPhase__c</fullName>
        <label>Supported Research Study Phase</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportedResearchStudyType__c</fullName>
        <label>Supported Research Study Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127407328_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacility_AccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>HealthcareFacility_AccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1723127407328_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127423762_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacility_HealthcareFacilit_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>HealthcareFacility_HealthcareFacilit_rel</relationshipLabel>
        <relationshipName>rel_1723127423762_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127457836_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacility_LocationId_map_Lo_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>HealthcareFacility_LocationId_map_Lo_rel</relationshipLabel>
        <relationshipName>rel_1723127457836_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>